--- a/game/game.css
+++ b/game/game.css
@@ -1,13 +1,16 @@
 .back{
     z-index: 3;
     background-color: rgb(94, 94, 94);
+    background-image: url(../img/gameback.jpg);
+    background-size: cover;
+    opacity: 0.93;
 }
   
 .game{
     background-color: rgb(244, 244, 244);
     width: 700px;
     height: 400px;
-    border: 2px solid black;
+    border: 3px solid black;
     position: absolute;
     top: 50%;
     left: 50%;
@@ -56,7 +59,7 @@
     background-size: 25px;
     z-index: 1;
 }
-.move{
+.move0{
     animation: blockmove 2.5s linear infinite;
 }
 
@@ -67,7 +70,7 @@
     40%{left: 402px;}
     60%{left: 268px;}
     80%{left: 134px;}
-    100%{left: -30px;}
+    100%{left: 0px;}
 }
 
 @keyframes jump{
