--- a/game/game.css
+++ b/game/game.css
@@ -50,7 +50,7 @@
 .block{
     
     position: relative;
-    top: 129px;
+    top: 97px;
     left: 670px;
     width: 25px;
     height: 43px;
@@ -59,10 +59,24 @@
     background-size: 25px;
     z-index: 1;
 }
+
+.block2{
+    position: relative;
+    width: 43px;
+    height: 32px;
+    top:  -8px;
+    left: 660px;       /**660**/
+    background-image: url(../img/bird.gif);
+    background-size: cover;
+    background-color: rgba(0, 0, 0, 0);
+}
 .move0{
     animation: blockmove 2.5s linear infinite;
 }
 
+.move1{
+    animation: blockmove1 12s linear infinite;
+}
 
 @keyframes blockmove{
     0%{left: 670px;}
@@ -71,6 +85,22 @@
     60%{left: 268px;}
     80%{left: 134px;}
     100%{left: 0px;}
+} 
+
+
+@keyframes blockmove1{
+    /**0%{left: -10px;}
+    20%{left: -132.4px;}
+    40%{left: -264.8px;}
+    60%{left: -397.2px;}
+    80%{left: -529.6px;}
+    100%{left: -672px;}**/
+    0%{left: 660px; }
+    20%{left: 330px; }
+    40%{left: 495px; }
+    60%{left: 330px; }
+    80%{left: 495px; }
+    100%{left: 0px; }
 }
 
 @keyframes jump{
