--- a/game/game.css
+++ b/game/game.css
@@ -2,7 +2,7 @@
     z-index: 3;
     background-color: rgb(94, 94, 94);
     background-image: url(../img/gameback.jpg);
-    background-size: cover;
+    background-size: 2000px;
     opacity: 0.93;
 }
   
@@ -36,12 +36,14 @@
     font-size: 30px;
     border:solid 2px black ;
     border-radius: 10px;
+    background-color: rgba(128, 128, 128, 0.623);
 }
 .hi:hover{
-    color: white;
+    color: rgba(240, 248, 255, 0.954);
+    /**color: white;**/
     font-size: 35px;
     top:38%; left: 26%; 
-    background-color: rgba(41, 2, 107, 0.683);
+    background-color: rgba(0, 0, 0, 0.815);
 }
 
 .animation{
@@ -69,6 +71,7 @@
     background-image: url(../img/bird.gif);
     background-size: cover;
     background-color: rgba(0, 0, 0, 0);
+    opacity: 0.7;
 }
 .move0{
     animation: blockmove 2.5s linear infinite;
@@ -112,4 +115,68 @@
     75%{top: 83px;}
     80%{top: 103px;}
     100%{top: 173px;}
+}
+
+
+.cloud0{
+    position: absolute;
+    background-color: rgb(255, 255, 255);
+    border: 1px solid black;
+    height: 50px;
+    width: 100px;
+    top: 30%;
+    left: 20%;
+    border-radius: 30px;
+    border-top-color:rgba(255, 255, 255, 0);
+}
+.cloud1{
+    position: absolute;
+    background-color: rgb(255, 255, 255);
+    border: 1px solid black;
+    height: 40px;
+    width: 49px;
+    top: -14px;
+    left: 5.5px;
+    border-radius: 100%;
+    z-index: 8;
+    border-bottom-color:rgba(255, 255, 255, 0);
+    border-right-color:rgba(255, 255, 255, 0);
+    rotate: 37deg;
+}
+
+.cloud2{
+    position: absolute;
+    background-color: rgb(255, 255, 255);
+    border: 1px solid black;
+    height: 30px;
+    width: 40px;
+    top: -10px;
+    left: 52.5px;
+    border-radius: 100%;
+    z-index: 9;
+    border-bottom-color:rgba(255, 255, 255, 0);
+    border-left-color:rgba(255, 255, 255, 0);
+    rotate: -30deg;
+}
+
+span{
+    content: "\2601";
+    position: absolute;
+    top: 30%;
+    left: 30%;
+    color: rgba(40, 52, 56, 0.313);
+    /**border: 1px solid black;**/
+    font-size: 100px;
+    animation: changecol 15s linear infinite;
+}
+
+.changecolor{
+    animation: changecol 1s linear infinite;
+}
+@keyframes changecol{
+    0%{color: rgba(40, 52, 56, 0.269); rotate: 10deg;}
+    25%{color: rgba(0, 0, 0, 0.365); rotate: 0deg;}
+    50%{color: rgba(34, 34, 80, 0.381); rotate: -10deg;}
+    75%{color: rgba(62, 28, 62, 0.37); rotate: 0deg;}
+    100%{color:rgba(40, 52, 56, 0.24); rotate: 10deg;}
 }
