--- a/game/game.css
+++ b/game/game.css
@@ -5,7 +5,23 @@
     background-size: 2000px;
     opacity: 0.93;
 }
-  
+ 
+
+.jumpbtn{
+    position: absolute;
+    top: 585px;
+    left: 49.8%;
+    transform: translate(-50%,-50%);
+    border-radius: 10px;
+    width: 300px;
+    height: 50px;
+    font-size: 30px;
+    box-shadow: 0 8px 16px 0 rgba(0,0,0,0.2), 0 6px 20px 0 rgba(0,0,0,0.19);
+    background-color: rgba(128, 128, 128, 0.582);
+    border: 2px solid white;
+    color: white;
+}
+
 .game{
     background-color: rgb(244, 244, 244);
     background-image: url("../img/desertback.png");
@@ -13,7 +29,7 @@
     background-size: cover;
     width: 700px;
     height: 400px;
-    border: 3px solid black;
+    border: 4px solid black;
     border-radius: 10px;
     position: absolute;
     top: 50%;
@@ -25,7 +41,7 @@
 .character{
     position: relative;
     left: 100px;
-    top: 173px;
+    top: 170px;
     width: 48px;
     height: 50px;
     background-color: rgba(0, 0, 0, 0);
@@ -56,7 +72,7 @@
 .block{
     
     position: relative;
-    top: 97px;
+    top: 96px;
     left: 670px;
     width: 25px;
     height: 43px;
