--- a/日文/50.css
+++ b/日文/50.css
@@ -13,6 +13,17 @@
     border-radius: 15px;
 }
 
+.select{
+    width: 180px;
+    height: 44px;
+    position: absolute;
+    font-size: 35px;
+    
+    background-color: rgb(38, 38, 38);
+    color: white;
+    border-radius: 10px;
+}
+
 .back{
     /**background-image: url(../img/japan_back.jpg);**/
     background-size: cover;
@@ -56,4 +67,5 @@
 .box:hover{
     color: rgba(157, 0, 255, 0.9);
     font-weight:900;
+    background-color: wheat;
 }
